multi or single step for fast sign

--- a/src/main/resources/templates/fragments/new-tools.html
+++ b/src/main/resources/templates/fragments/new-tools.html
@@ -10,7 +10,7 @@
            data-bs-toggle="modal"
            data-bs-target="#wiz-self-sign-modal"
            title="Signer vos documents présents sur votre poste de travail">
-            <div class="d-flex flex-column align-items-center justify-content-start h-100 w-100 gap-1 text-dark-emphasis">
+            <div class="d-flex flex-column align-items-center justify-content-start h-100 w-100 gap-1 text-secondary-emphasis">
                 <div style="height: clamp(45px, 6vw, 70px);" class="d-flex align-items-center">
                     <i class="fi fi-tr-attribution-pencil" style="font-size: clamp(32px, 4vw, 50px);"></i>
                 </div>
@@ -24,7 +24,7 @@
            data-bs-toggle="modal"
            data-bs-target="#wiz-fast-sign-modal"
            title="Envoyer un/des documents à vos destinataires">
-            <div class="d-flex flex-column align-items-center justify-content-start h-100 w-100 gap-1 text-dark-emphasis">
+            <div class="d-flex flex-column align-items-center justify-content-start h-100 w-100 gap-1 text-secondary-emphasis">
                 <div style="height: clamp(45px, 6vw, 70px);" class="d-flex align-items-center">
                     <i class="fi fi-tr-paper-plane-launch" style="font-size: clamp(32px, 4vw, 50px);"></i>
                 </div>
@@ -38,7 +38,7 @@
            style="height: auto; margin: 0;"
            data-bs-toggle="modal" data-bs-target="#wiz-custom-sign-modal"
            title="Envoyer des documents dans un circuit à plusieurs étapes">
-            <div class="d-flex flex-column align-items-center justify-content-start h-100 w-100 gap-1 text-dark-emphasis">
+            <div class="d-flex flex-column align-items-center justify-content-start h-100 w-100 gap-1 text-secondary-emphasis">
                 <div style="height: clamp(45px, 6vw, 70px);" class="d-flex align-items-center">
                     <i class="fi fi-tr-plan"  style="font-size: clamp(32px, 4vw, 50px);"></i>
                 </div>
@@ -51,7 +51,7 @@
            style="height: auto; margin: 0;"
            data-bs-toggle="modal" data-bs-target="#allModal"
            title="Afficher la liste complète des circuits et formulaires disponibles">
-            <div class="d-flex flex-column align-items-center justify-content-start h-100 w-100 gap-1 text-dark-emphasis">
+            <div class="d-flex flex-column align-items-center justify-content-start h-100 w-100 gap-1 text-secondary-emphasis">
                 <div style="height: clamp(45px, 6vw, 70px);" class="d-flex align-items-center">
                     <i class="fi fi-tr-category" style="font-size: clamp(32px, 4vw, 50px);"></i>
                 </div>
