--- a/src/main/resources/templates/user/wizard/wiz-fast-sign.html
+++ b/src/main/resources/templates/user/wizard/wiz-fast-sign.html
@@ -34,41 +34,51 @@
                     </select>
                     <div id="tempUsers-recipientsEmails-1"></div>
                 </div>
-                <div class="form-check form-switch form-switch-md" id="all-sign-to-complete-div-1" style="display: none">
-                    <label  class="form-check-label" for="all-sign-to-complete-1">Tous les participants doivent-ils signer ?</label>
-                    <input type="checkbox" class="form-check-input" name="allSignToComplete" id="all-sign-to-complete-1"/>
+                <div id="all-sign-to-complete-div-1" style="display: none">
+                    <div class="form-check form-switch form-switch-md">
+                        <label  class="form-check-label" for="single-steps-false-1">Les participants signent en série (une étape par participant)</label>
+                        <input type="radio" class="form-check-input" name="singleStep" value="false" id="single-steps-false-1" checked/>
+                    </div>
+                    <div class="form-check form-switch form-switch-md">
+                        <label  class="form-check-label" for="single-steps-true-1">Les participants peuvent signer en parallèle (une seule étape)</label>
+                        <input type="radio" class="form-check-input" name="singleStep" value="true" id="single-steps-true-1"/>
+                    </div>
+                    <div class="form-check form-switch form-switch-md">
+                        <label  class="form-check-label" for="all-sign-to-complete-1">Tous les participants doivent-ils signer ?</label>
+                        <input type="checkbox" class="form-check-input" name="allSignToComplete" id="all-sign-to-complete-1"/>
+                    </div>
                 </div>
             </div>
             <div class="align-self-start">
-                <button data-bs-target="#collapseHelpSignType" data-bs-toggle="collapse" title="Aide sur les types de signature"
-                        type="button" class="btn btn-sm btn-transparent">
-                    <span class="fa-solid fa-info-circle text-info"></span>
-                </button>
-                <div class="collapse" id="collapseHelpSignType">
-                    <div class="alert alert-info">
-                        <small>
-                            <ul>
-                                <li><b>Signature :</b> La signature modifie le document en ajoutant une image et/ou en verrouillant le document, en fonction du niveau choisi.</li>
-                                <li><b>Visa :</b> Le visa est une version simplifiée de la signature simple, l’utilisateur ne peut pas modifier le visuel de son visa. Le visa ne permet pas la signature avancée, mais il est possible de vérrouiller le document via le certificat cachet si votre plateforme en possède un.</li>
-                                <li><b>Vérification :</b> La vérification permet juste de valider un document sans l’altérer</li>
-                            </ul>
-                            <ul>
-                                <li>
-                                    <b>Signature simple :</b> adaptée aux documents internes ou aux échanges ne présentant pas de risque particulier, lorsqu’il n’existe pas d’obligation légale imposant un niveau supérieur. (apposition d’une image + traces)
-                                </li>
-                                <li>
-                                    <b>Signature avancée :</b> recommandée pour les documents nécessitant de pouvoir identifier le signataire et disposer d’un élément de preuve supplémentaire, par exemple pour des contrats ou des engagements comportant un risque juridique modéré. (nécessite un certificat électronique)
-                                </li>
-                                <li>
-                                    <b>Signature qualifiée :</b> à privilégier pour les actes à portée européenne ou pour les situations à fort enjeu (importance juridique ou financière), car elle bénéficie d’une reconnaissance mutuelle dans l’Union européenne et d’une présomption de fiabilité équivalente à une signature manuscrite. (nécessite un certificat eIDas)
-                                </li>
-                            </ul>
-                        </small>
-                    </div>
-                </div>
                 <div class="d-flex flex-column gap-2 mb-2">
                     <div class="form-group w-100">
                         <label class="form-label" for="signType-1">Choisir un type de signature *</label>
+                        <button data-bs-target="#collapseHelpSignType" data-bs-toggle="collapse" title="Aide sur les types de signature"
+                                type="button" class="btn btn-sm btn-transparent">
+                            <span class="fa-solid fa-info-circle text-info"></span>
+                        </button>
+                        <div class="collapse" id="collapseHelpSignType">
+                            <div class="alert alert-info mb-1">
+                                <small>
+                                    <ul>
+                                        <li><b>Signature :</b> La signature modifie le document en ajoutant une image et/ou en verrouillant le document, en fonction du niveau choisi.</li>
+                                        <li><b>Visa :</b> Le visa est une version simplifiée de la signature simple, l’utilisateur ne peut pas modifier le visuel de son visa. Le visa ne permet pas la signature avancée, mais il est possible de vérrouiller le document via le certificat cachet si votre plateforme en possède un.</li>
+                                        <li><b>Vérification :</b> La vérification permet juste de valider un document sans l’altérer</li>
+                                    </ul>
+                                    <ul>
+                                        <li>
+                                            <b>Signature simple :</b> adaptée aux documents internes ou aux échanges ne présentant pas de risque particulier, lorsqu’il n’existe pas d’obligation légale imposant un niveau supérieur. (apposition d’une image + traces)
+                                        </li>
+                                        <li>
+                                            <b>Signature avancée :</b> recommandée pour les documents nécessitant de pouvoir identifier le signataire et disposer d’un élément de preuve supplémentaire, par exemple pour des contrats ou des engagements comportant un risque juridique modéré. (nécessite un certificat électronique)
+                                        </li>
+                                        <li>
+                                            <b>Signature qualifiée :</b> à privilégier pour les actes à portée européenne ou pour les situations à fort enjeu (importance juridique ou financière), car elle bénéficie d’une reconnaissance mutuelle dans l’Union européenne et d’une présomption de fiabilité équivalente à une signature manuscrite. (nécessite un certificat eIDas)
+                                        </li>
+                                    </ul>
+                                </small>
+                            </div>
+                        </div>
                         <select class="form-select" name="signType" id="signType-1" onchange="toggleSignLevel()">
                             <th:block th:each="signType : ${signTypes}">
                                 <option th:value="${signType}"
