--- a/src/main/resources/templates/user/signrequests/includes/workspace.html
+++ b/src/main/resources/templates/user/signrequests/includes/workspace.html
@@ -15,7 +15,7 @@
             const displayPdfAlertsDropdown = $('#display-pdf-alerts-dropdown');
             const displayPdfAlertsBtn = $('#display-pdf-alerts-btn');
         </script>
-        <div id="pdf-alerts" class="pdf-alerts dropdown-menu">
+        <div id="pdf-alerts" class="pdf-alerts dropdown-menu shadow">
             <h5 class="w-100 text-center"><i class="fa-solid fa-bell"></i> Alertes</h5>
             <div class="d-flex flex-column gap-1">
                 <th:block th:if="${comments.size() > 0}">
