--- a/src/main/resources/templates/user/signrequests/show.html
+++ b/src/main/resources/templates/user/signrequests/show.html
@@ -63,7 +63,7 @@
                     </li>
                     <li>
                         <button tabindex="1" id="addCommentButton2" role="button" class="btn-floating btn-lg bg-warning d-none" title="Ajouter une annotation" style="border: 0">
-                            <i class="fi fi-rr-comment-alt fa-2xl text-dark" style="margin-top: 0;"></i>
+                            <i class="fi fi-rr-comment-alt fa-2xl text-black" style="margin-top: 0;"></i>
                         </button>
                     </li>
                     <th:block id="signButtons" th:if="${signRequest.status == T(org.esupportail.esupsignature.entity.enums.SignRequestStatus).draft}" th:unless="${signable}" class="fixed-action-btns active">
